[package]
name = "crypto-glue"
description = "A facade over the RustCrypto ecosystem"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
homepage = "https://github.com/kanidm/crypto-glue/"
repository = "https://github.com/kanidm/crypto-glue/"
authors = ["William Brown <william@blackhats.net.au>"]

[features]
default = [ "alloc" ]
alloc = [ "argon2/alloc" ]

[dependencies]
aes = "0.8.1"
aes-gcm = "0.10.3"
aes-kw = "0.2.1"
argon2 = { version = "0.5.2" }
cbc = "0.1.2"
crypto-common = { version = "0.1", features = ["rand_core"] }
hex = "0.4.3"
hmac = "0.12"

rand = "0.8.4"

sha2 = "0.10"
tracing = "^0.1.37"

zeroize = { version = "1.6.0", features = ["serde"] }

[dependencies.generic-array]
version = "0.14.7"
features = [
	"zeroize",
	"serde",
]

[dev-dependencies]
tracing-subscriber = "^0.3.17"

